# city_info

./: .gitignore  Cargo.toml  README.md  app.properties
src/: city_info.rs  main.rs
src/test/: city_payload.json  mod.rs
