[package]
name = "city_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
futures = "0.3.26" 
tokio = { version = "1.25.0", features = ["full"] } 
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
httpmock = "0.6.7"
app_properties = "0.1.0"

[dev-dependencies]
tokio-test = "*"
